--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -12,15 +12,18 @@ I'm a fourth year student at Tohoku University.
 
 ### Education
 - 東北大学教育学部教育科学科
-    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-
+    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
+- 東北大学教育学研究科
+    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
+ 
 
 
 ### Programming Skill
 - Python
 
 ### Experience
-- Wolt Japan株式会社
-    - ビジネスインターン, 2020/11-2022/02
+- Wolt Japan株式会社 
+    - Operations Associate (インターン), 2020/11-2022/02
     
 ### Others
 - [AI王 〜クイズAI日本一決定戦〜](https://sites.google.com/view/project-aio/) 
