--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -2,7 +2,7 @@
 layout: post
 title: About
 ---
-I'm a fourth year student at Tohoku University.
+I'm a master's student at Tohoku University.
 
 ### Research Interest
 - Natural language processing
@@ -23,11 +23,13 @@ I'm a fourth year student at Tohoku University.
 
 ### Experience
 - Wolt Japan株式会社 
-    - Operations Associate (インターン), 2020/11-2022/02
+    - Operations Associate, 2020/11-2022/02 (長期インターン)
+
     
 ### Others
 - [AI王 〜クイズAI日本一決定戦〜](https://sites.google.com/view/project-aio/) 
-    - 実行委員, 2021/12-
+    - 実行委員, 2021/12-2022/03
+    
 
 
 
