--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -4,29 +4,44 @@ title: About
 ---
 I'm a master's student at Tohoku University.
 
-### Research Interest
+## Research Interest
 - Natural language processing
 - Neural language model
 - Computational psycholinguistics
 - Discourse
 
-### Education
-- 東北大学教育学部教育科学科
-    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
+## Education
 - 東北大学教育学研究科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
- 
+- 東北大学教育学部教育科学科
+    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
+- 新潟県立新潟高等学校 理数科, 2014/04-2017/03
 
-
-### Programming Skill
+## Programming Skill
 - Python
 
-### Experience
+## Experience
+### Research
+- 理研AIP　自然言語理解チーム　
+    - 研修生 2021/09-
+    
+### Internship
+- 日本経済新聞社 電子版
+    - 長期インターン 2022/10-
+- 日本経済新聞社 電子版
+    - 短期インターン 2022/09/02-2022/09/04
+- 日本IBM　データサイエンティストコース
+    - サマーインターン 2022/07/25-2022/08/04
 - Wolt Japan株式会社 
     - Operations Associate, 2020/11-2022/02 (長期インターン)
 
-    
 ### Others
+- 東北大学 教育学部専門科目 教育学研究入門
+    - Teaching Assistant, 2022/10-2023/02
+- Workshop on ExploreCSR @ Tohoku University
+    - 運営スタッフ, 2022/07/09
+- 東北大学 全学教育科目 学問論
+    - Teaching Assistant, 2022/04-2022/07
 - [AI王 〜クイズAI日本一決定戦〜](https://sites.google.com/view/project-aio/) 
     - 実行委員, 2021/12-2022/03
     
