--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -4,23 +4,23 @@ title: About
 ---
 I'm a master's student at Tohoku University.
 
-## Research Interest
+## 🔍Research Interest
 - Natural language processing
 - Neural language model
 - Computational psycholinguistics
 - Discourse
 
-## Education
+## 🎓Education 
 - 東北大学教育学研究科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
 - 東北大学教育学部教育科学科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
 - 新潟県立新潟高等学校 理数科, 2014/04-2017/03
 
-## Programming Skill
+## 💻Programming Skill
 - Python
 
-## Experience
+## 🚀Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
     - 研修生 2021/09-
