--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -17,6 +17,12 @@ I'm a master's student at Tohoku University.
 - 新潟県立新潟高等学校 理数科, 2014/04-2017/03
 ## 💻  Programming Skill
 - Python
+## 📖 Publications
+### Domestic Conferences
+- 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
+ *言語処理学会第28回年次大会予稿集*, pp.442-447, March 2022.
+- 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
+ *NLP若手の会 (YANS2021) 第16回シンポジウム*, August 2021.
 ## 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
