--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -4,26 +4,26 @@ title: About Me
 permalink: /aboutme/
 ---
 I'm a master's student at Tohoku University.
-## 🔍  Research Interest
+# 🔍  Research Interest
 - Natural language processing
 - Neural language model
 - Computational psycholinguistics
 - Discourse
-## 🎓  Education 
+# 🎓  Education 
 - 東北大学教育学研究科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
 - 東北大学教育学部教育科学科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
 - 新潟県立新潟高等学校 理数科, 2014/04-2017/03
-## 💻  Programming Skill
+# 💻  Programming Skill
 - Python
-## 📖 Publications
-### Domestic Conferences
+# 📖  Publications
+### Domestic conferences
 - 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
  *言語処理学会第28回年次大会予稿集*, pp.442-447, March 2022.
 - 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
  *NLP若手の会 (YANS2021) 第16回シンポジウム*, August 2021.
-## 🚀  Experience
+# 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
     - 研修生 2021/09-
