--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -1,6 +1,7 @@
 ---
-layout: post
+layout: page
 title: About Me
+permalink: /aboutme/
 ---
 I'm a master's student at Tohoku University.
 # 🔍  Research Interest
