--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 title: About Me
 ---
 I'm a master's student at Tohoku University.
@@ -8,6 +8,7 @@ I'm a master's student at Tohoku University.
 - Neural language model
 - Computational psycholinguistics
 - Discourse
+
 # 🎓  Education 
 - 東北大学教育学研究科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
