--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: About Me
+title: 💁 About Me
 ---
 I'm a master's student at Tohoku University.
 # 🔍  Research Interest
@@ -15,8 +15,10 @@ I'm a master's student at Tohoku University.
 - 東北大学教育学部教育科学科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
 - 新潟県立新潟高等学校 理数科, 2014/04-2017/03
+
 # 💻  Programming Skill
 - Python
+
 # 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
