--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -23,15 +23,17 @@ I'm a master's student at Tohoku University.
 ### Research
 - 理研AIP　自然言語理解チーム　
     - 研修生 2021/09-
+    
 ### Internship
 - 日本経済新聞社 電子版
-    - 長期インターン 2022/10-
+    - 長期インターン, 2022/10-
 - 日本経済新聞社 電子版
-    - 短期インターン 2022/09/02-2022/09/04
+    - 短期インターン, 2022/09/02-2022/09/04
 - 日本IBM データサイエンティストコース
-    - サマーインターン 2022/07/25-2022/08/04
-- Wolt Japan株式会社 
-    - Operations Associate, 2020/11-2022/02 (長期インターン)
+    - サマーインターン, 2022/07/25-2022/08/04
+- Wolt Japan株式会社 Operations Associate
+    - 長期インターン, 2020/11-2022/02
+    
 ### Others
 - 東北大学 教育学部専門科目 教育学研究入門
     - Teaching Assistant, 2022/10-2023/02
