--- a/_posts/2022-02-16-about.md
+++ b/_posts/2022-02-16-about.md
@@ -16,6 +16,17 @@ I'm a master's student at Tohoku University.
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
 - 新潟県立新潟高等学校 理数科, 2014/04-2017/03
 
+# 🏆 Awards
+- [言語処理学会第29回年次大会 委員特別賞](https://www.anlp.jp/nlp2023/award.html)
+# 📚 Publications
+
+- 石月由紀子, 栗林樹生, 松林優一郎, 笹野遼平, 乾健太郎. **日本語話者の項省略判断に関するアノテーションとモデリング**\
+   *言語処理学会第29回年次大会予稿集*, pp.91-96, March 2023.
+- 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
+*言語処理学会第28回年次大会予稿集*, pp.442-447, March 2022.
+- 石月由紀子, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
+*NLP若手の会 (YANS2021) 第16回シンポジウム*, August 2021.
+
 # 💻  Programming Skill
 - Python
 
