--- a/_posts/2023-03-19-about.md
+++ b/_posts/2023-03-19-about.md
@@ -34,7 +34,8 @@ Domestic Conferences
 # 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
-    - 研修生 2021/09-
+    - 研究パートタイマー 2023/04-
+    - 研修生 2021/09-2023/03
     
 ### Internship
 - 日本経済新聞社 電子版
@@ -46,7 +47,13 @@ Domestic Conferences
 - Wolt Japan株式会社 Operations Associate
     - 長期インターン, 2020/11-2022/02
     
+## Invited Talk
+- 女子中高生のための「数理・情報・AI」最前線！
+    - 理化学研究所革新知能統合研究センター 女子中高生向けオンラインセミナー, オンライン, 2022/01/27
+    
 ### Others
+- 東北大学 教育学部専門科目 教育学実習
+      - Teaching Assistant, 2023/04-2023/07
 - 東北大学 教育学部専門科目 教育学研究入門
     - Teaching Assistant, 2022/10-2023/02
 - Workshop on ExploreCSR @ Tohoku University
