--- a/_posts/2023-03-19-about.md
+++ b/_posts/2023-03-19-about.md
@@ -39,7 +39,7 @@ Domestic Conferences
     
 ### Internship
 - 日本経済新聞社 電子版
-    - 長期インターン, 2022/10-
+    - 長期インターン, 2022/10-2023/04
 - 日本経済新聞社 電子版
     - 短期インターン, 2022/09/02-2022/09/04
 - 日本IBM データサイエンティストコース
@@ -47,7 +47,7 @@ Domestic Conferences
 - Wolt Japan株式会社 Operations Associate
     - 長期インターン, 2020/11-2022/02
     
-## Invited Talk
+### Invited Talk
 - 女子中高生のための「数理・情報・AI」最前線！
     - 理化学研究所革新知能統合研究センター 女子中高生向けオンラインセミナー, オンライン, 2022/01/27
     
