--- a/_posts/2023-11-23-about.md
+++ b/_posts/2023-11-23-about.md
@@ -3,20 +3,19 @@ layout: post
 title: 💁 About Me
 ---
 I'm a master's student at Tohoku University.
-# 🔍  Research Interest
+## 🔍  Research Interest
 - Natural language processing
 - Neural language model
 - Computational psycholinguistics
 - Discourse
 
-# 🎓  Education 
+## 🎓  Education 
 - 東北大学教育学研究科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
 - 東北大学教育学部教育科学科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
-- 新潟県立新潟高等学校 理数科, 2014/04-2017/03
 
-# 📚 Publications
+## 📚 Publications
 Domestic Conferences
 - <u>石月由紀子</u>, 栗林樹生, 松林優一郎, 笹野遼平, 乾健太郎. **日本語話者の項省略判断に関するアノテーションとモデリング**\
    *言語処理学会第29回年次大会予稿集*, pp.91-96, March 2023.
@@ -25,13 +24,13 @@ Domestic Conferences
 - <u>石月由紀子</u>, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
 *NLP若手の会 (YANS2021) 第16回シンポジウム*, August 2021.
 
-# 🏆 Awards
+## 🏆 Awards
 - [言語処理学会第29回年次大会 委員特別賞](https://www.anlp.jp/nlp2023/award.html) , 2023/03 
 
-# 💻  Programming Skill
+## 💻  Programming Skill
 - Python
 
-# 🚀  Experience
+## 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
     - 研究パートタイマー 2023/04-
@@ -40,18 +39,20 @@ Domestic Conferences
 ### Internship
 - 日本経済新聞社 電子版
     - 長期インターン, 2022/10-2023/04
-- 日本経済新聞社 電子版
     - 短期インターン, 2022/09/02-2022/09/04
 - 日本IBM データサイエンティストコース
     - サマーインターン, 2022/07/25-2022/08/04
 - Wolt Japan株式会社 Operations Associate
     - 長期インターン, 2020/11-2022/02
+     
     
 ### Invited Talk
 - 女子中高生のための「数理・情報・AI」最前線！
     - 理化学研究所革新知能統合研究センター 女子中高生向けオンラインセミナー, オンライン, 2022/01/27
     
 ### Others
+- 東北大学 工学部専門科目 創造工学研修
+    - Teaching Assistant, 2023/10-2023/02
 - 東北大学 教育学部専門科目 教育学実習
     - Teaching Assistant, 2023/04-2023/07
 - 東北大学 教育学部専門科目 教育学研究入門
@@ -60,7 +61,7 @@ Domestic Conferences
     - 運営スタッフ, 2022/07/09
 - 東北大学 全学教育科目 学問論
     - Teaching Assistant, 2022/04-2022/07
-- [AI王 〜クイズAI日本一決定戦〜](https://sites.google.com/view/project-aio/) 
+- AI王 〜クイズAI日本一決定戦〜 
     - 実行委員, 2021/12-2022/03
     
 
