--- a/_posts/2024-05-02-about.md
+++ b/_posts/2024-05-02-about.md
@@ -2,7 +2,6 @@
 layout: post
 title: 💁 About Me
 ---
-I'm a master's student at Tohoku University.
 ## 🔍  Research Interest
 - Natural language processing
 - Neural language model
@@ -11,12 +10,17 @@ I'm a master's student at Tohoku University.
 
 ## 🎓  Education 
 - 東北大学教育学研究科
-    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-
+    - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2022/04-2024/03
 - 東北大学教育学部教育科学科
     - [松林研究室](https://www.edunlp.sed.tohoku.ac.jp/) , 2018/04-2022/03
 
 ## 📚 Publications
-Domestic Conferences
+### International Conferences
+- <u>Yukiko Ishizuki</u>, Tatsuki Kuribayashi, Yuichiroh Matsubayashi, Ryohei Sasano, Kentaro Inui. To Drop or Not to Drop? Predicting Argument Ellipsis Judgments: A Case Study in Japanese. In Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024), pp.-, May 2024. [\[arXiv\]](https://arxiv.org/abs/2404.11315)
+- <u>Yukiko Ishizuki</u>\*, Daiki Shiono\*, Ana Brassard, Jun Suzuki (*: equal contribution). Non-archival submission for the 18th Conference of the European Chapter of the Association for Computational Linguistics Student Research Workshop (EACL-SRW 2024), March 2024.
+
+
+### Domestic Conferences
 - <u>石月由紀子</u>, 栗林樹生, 松林優一郎, 笹野遼平, 乾健太郎. **日本語話者の項省略判断に関するアノテーションとモデリング**\
    *言語処理学会第29回年次大会予稿集*, pp.91-96, March 2023.
 - <u>石月由紀子</u>, 栗林樹生, 松林優一郎, 大関洋平. **情報量に基づく日本語項省略の分析**\
@@ -25,15 +29,16 @@ Domestic Conferences
 *NLP若手の会 (YANS2021) 第16回シンポジウム*, August 2021.
 
 ## 🏆 Awards
-- [言語処理学会第29回年次大会 委員特別賞](https://www.anlp.jp/nlp2023/award.html) , 2023/03 
+- 教育学研究科研究科長賞, 2024/03
+- [言語処理学会第29回年次大会 委員特別賞](https://www.anlp.jp/nlp2023/award.html) , 2023/03
 
 ## 💻  Programming Skill
-- Python
+- Python - Fluent
 
 ## 🚀  Experience
 ### Research
 - 理研AIP　自然言語理解チーム　
-    - 研究パートタイマー 2023/04-
+    - 研究パートタイマー 2023/04-2024/03
     - 研修生 2021/09-2023/03
     
 ### Internship
